--- a/htdocs/data/iqlight/fabnavi.play.config
+++ b/htdocs/data/iqlight/fabnavi.play.config
@@ -5,9 +5,11 @@
     <animation startIndex="60" endIndex="64" duration="800" />
   </animations>
   <annotations>
-    <annotation index="10" image="sample1.png" x="30" y="100" w="500" h="500" />
-    <annotation index="20" image="sample2.png" x="30" y="100" w="500" h="500" />
-    <annotation index="101" image="sample3.png" x="30" y="100" w="500" h="500" />
-    <annotation index="124" image="sample4.png" x="30" y="100" w="500" h="500" />
+    <annotation index="10" image="arrow.svg" x="30" y="100" angle="120" w="500" h="500" />
+    <annotation index="101" image="arrow.svg" x="30" y="100" angle="120" w="500" h="500" />
+    <annotation index="20" image="arrow.svg" x="30" y="100" angle="120" w="500" h="500" />
+    <annotation index="2" image="arrow.svg" x="300" y="300" angle="120" w="500" h="500" />
+    <annotation index="3" image="arrow.svg" x="200" y="100" angle="270" w="500" h="500" />
+    <annotation index="124" image="arrow.svg" x="30" y="100" angle="120" w="500" h="500" />
   </annotations>
 </playSetting>
