--- a/htdocs/data/iqlight/fabnavi.play.config
+++ b/htdocs/data/iqlight/fabnavi.play.config
@@ -9,6 +9,7 @@
     <annotation index="101" image="arrow.svg" x="30" y="100" angle="120" w="500" h="500" />
     <annotation index="20" image="arrow.svg" x="30" y="100" angle="120" w="500" h="500" />
     <annotation index="2" image="arrow.svg" x="300" y="300" angle="120" w="500" h="500" />
+    <annotation index="2" image="arrow.svg" x="100" y="530" angle="420" w="500" h="500" />
     <annotation index="3" image="arrow.svg" x="200" y="100" angle="270" w="500" h="500" />
     <annotation index="124" image="arrow.svg" x="30" y="100" angle="120" w="500" h="500" />
   </annotations>
