--- a/htdocs/data/lego/fabnavi.play.config
+++ b/htdocs/data/lego/fabnavi.play.config
@@ -1,6 +1,1 @@
-<playSetting>
-  <animations>
-    <animation startIndex="1" endIndex="3" duration="500"/>
-    <animation startIndex="5" endIndex="9" duration="500"/>
-  </animations>
-</playSetting>
+hello world
