Fix Camera Compatiblity

--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -6,3 +6,5 @@ SetEnv PHOTO_CROP_X 1184#539
 SetEnv PHOTO_CROP_Y 381#558
 SetEnv PHOTO_CROP_W 2132#675
 SetEnv PHOTO_CROP_H 1162#420
+#NEX5R or QX10
+SetEnv CAMERA NEX5R
