--- a/htdocs/.htaccess
+++ b/htdocs/.htaccess
@@ -7,4 +7,4 @@ SetEnv PHOTO_CROP_Y 381#558
 SetEnv PHOTO_CROP_W 2132#675
 SetEnv PHOTO_CROP_H 1162#420
 #NEX5R or QX10
-SetEnv CAMERA NEX5R
+SetEnv CAMERA QX10
