--- a/gdworker/Gemfile
+++ b/gdworker/Gemfile
@@ -32,3 +32,5 @@ gem 'padrino', '0.12.1'
 # %w(core support gen helpers cache mailer admin).each do |g|
 #   gem 'padrino-' + g, '0.12.1'
 # end
+#
+gem 'resque'
